--- a/credit/templates/credit/bank_list.html
+++ b/credit/templates/credit/bank_list.html
@@ -5,24 +5,26 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h1 class="h2">List View</h1>
   <div class="btn-toolbar mb-2 mb-md-0">
-    <div class="btn-group mr-2">
+    <div class="btn-group me-2">
       <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
       <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
     </div>
-    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-      <span data-feather="calendar"></span>
+    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle d-flex align-items-center gap-1">
+      <svg class="bi">
+        <use xlink:href="#calendar3" />
+      </svg>
       This week
     </button>
   </div>
 </div>
 
 <h2>Bank List Obj {{hola}}</h2>
-<div class="table-responsive">
+<div class="table-responsive small">
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th>#</th>
-        <th>Name</th>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
       </tr>
     </thead>
     <tbody>
