--- a/credit/templates/credit/bank_list.html
+++ b/credit/templates/credit/bank_list.html
@@ -35,6 +35,43 @@
       </tr>
       {% endfor %}
     </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="2">
+          <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              {% if page_obj.has_previous %}
+              <li class="page-item">
+                <a class="page-link" href="?page=1" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                </a>
+              </li>
+              <li class="page-item"><a class="page-link"
+                  href="?page={{ page_obj.previous_page_number }}">{{page_obj.previous_page_number}}</a></li>
+              {% else %}
+              <li class="page-item disabled">
+                <span class="page-link">&laquo;</span>
+              </li>
+              {% endif %}
+
+              <li class="page-item active" aria-current="page">
+                <span class="page-link">{{page_obj.number}}</span>
+              </li>
+
+              {% if page_obj.has_next %}
+              <li class="page-item"><a class="page-link"
+                  href="?page={{ page_obj.next_page_number }}">{{page_obj.next_page_number}}</a></li>
+              <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+              </li>
+              {% endif %}
+            </ul>
+          </nav>
+        </td>
+      </tr>
+    </tfoot>
   </table>
 </div>
 {% endblock %}
